# hydra-pywr

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py
examples/basics/: import_exercise.sh  run.py
examples/basics/exercise1/: exercise1a.json  exercise1b.json  exercise1c.json  exercise1d.json  exercise1e.json
examples/basics/exercise2/: exercise2a.json  exercise2b.json  exercise2c.json  exercise2d.json  exercise2e.json
examples/basics/exercise3/: exercise3a.json  exercise3b.json  exercise3c.json  exercise3d.json
hydra_pywr/: __init__.py  cli.py  config.py  core.py  datatypes.py  exporter.py  filecache.py  hydra_pywr_custom_module.py  hydropower_nodes.py  importer.py  node_layouts.json  parameters.py  rules.py  runner.py  template.py  type_definitions.json  utils.py
hydra_pywr/nodes/: __init__.py  hydropower.py  river.py  ukwrp.py
hydra_pywr/resultsprocessor/: __init__.py  hydra.py  mongo.py  mongo_structure.json
hydra_pywr/template_configs/: full.json  hydropower.json
tests/: fixtures.py  helpers.py  hydra_base_fixtures.py  test_client_exporting.py  test_client_importing.py  test_hydra_base_exporting.py  test_hydra_base_importing.py  test_model_results.py  test_nodes_edges.py  test_parameter_patterns.py
tests/models/: hydra_generated.json  hydropower.json  hydropower_verification.json  national_model.json  simple_with_scenario.json
